--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,6 +10,9 @@ on:
     paths:
       - docker-build/**
       - .github/workflows/docker.yml
+  schedule:
+    # Runs automatically on the 27th of every month at 04.50 UTC
+    - cron:  "50 04 27 * *"
 
 jobs:
   docker:
