--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,10 @@ services:
       - ./volumes/ssh_host_ed25519_key.pub:/etc/ssh/ssh_host_ed25519_key.pub:ro
       - ./volumes/ssh_host_rsa_key:/etc/ssh/ssh_host_rsa_key:ro
       - ./volumes/ssh_host_rsa_key.pub:/etc/ssh/ssh_host_rsa_key.pub:ro
+      # Persistent data directory
+      - data:/data
     environment:
-      RESOLUTION: 1440x900
-      PASSWORD: debian
-      VNC_PASSWORD: debian
+      VNC_PASSWORD: mainuser
+
+volumes:
+  data: {}
