--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,14 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
       # OpenSSH server host keys
-      - ./volumes/ssh_host_dsa_key:/etc/ssh/ssh_host_dsa_key:ro
-      - ./volumes/ssh_host_dsa_key.pub:/etc/ssh/ssh_host_dsa_key.pub:ro
-      - ./volumes/ssh_host_ecdsa_key:/etc/ssh/ssh_host_ecdsa_key:ro
-      - ./volumes/ssh_host_ecdsa_key.pub:/etc/ssh/ssh_host_ecdsa_key.pub:ro
-      - ./volumes/ssh_host_ed25519_key:/etc/ssh/ssh_host_ed25519_key:ro
-      - ./volumes/ssh_host_ed25519_key.pub:/etc/ssh/ssh_host_ed25519_key.pub:ro
-      - ./volumes/ssh_host_rsa_key:/etc/ssh/ssh_host_rsa_key:ro
-      - ./volumes/ssh_host_rsa_key.pub:/etc/ssh/ssh_host_rsa_key.pub:ro
+      # - ./hostkeys/ssh_host_dsa_key:/etc/ssh/ssh_host_dsa_key:ro
+      # - ./hostkeys/ssh_host_dsa_key.pub:/etc/ssh/ssh_host_dsa_key.pub:ro
+      # - ./hostkeys/ssh_host_ecdsa_key:/etc/ssh/ssh_host_ecdsa_key:ro
+      # - ./hostkeys/ssh_host_ecdsa_key.pub:/etc/ssh/ssh_host_ecdsa_key.pub:ro
+      # - ./hostkeys/ssh_host_ed25519_key:/etc/ssh/ssh_host_ed25519_key:ro
+      # - ./hostkeys/ssh_host_ed25519_key.pub:/etc/ssh/ssh_host_ed25519_key.pub:ro
+      # - ./hostkeys/ssh_host_rsa_key:/etc/ssh/ssh_host_rsa_key:ro
+      # - ./hostkeys/ssh_host_rsa_key.pub:/etc/ssh/ssh_host_rsa_key.pub:ro
       # Persistent data directory
       - data:/data
     environment:
